--- a/lien-he.htm
+++ b/lien-he.htm
@@ -142,7 +142,7 @@
             <div class="form-group row">
                 <label for="staticEmail" class="col-sm-2 col-form-label">Điện Thoại</label>
                 <div class="col-sm-10">
-                    <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="0968666888">
+                    <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="0368507238">
                 </div>
             </div>
 
@@ -150,7 +150,7 @@
                 <label for="staticEmail" class="col-sm-2 col-form-label">Địa Chỉ</label>
                 <div class="col-sm-10">
                     <input type="text" readonly class="form-control-plaintext" id="staticEmail"
-                        value="128A Hồ Tùng Mậu">
+                        value="136 Hồ Tùng Mậu">
                 </div>
             </div>
 
